<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/img_delete"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_delete_time" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:ignore="UselessParent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black"
            android:layout_margin="5dp"
            android:weightSum="2"
            android:layout_marginLeft="1dp">

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:showText="true"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
        </LinearLayout>


        <TextView
            android:id="@+id/txt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/action_timer"
            android:textColor="@color/white"
            android:textSize="13.3sp"/>

    </LinearLayout>


</FrameLayout>
